# CCVshopPythonClient

./: LICENSE  README.md
ccv/: auth.py  pyproject.toml
ccv/api/: endpoint.py
ccv/endpoints/: affiliatenetworks.py  apicredentialdevices.py  apicredentialdevicesettings.py  appcodeblocks.py  appconfig.py  appmessages.py  apppsp.py  apppsppaymethods.py  apps.py  appstorecategories.py  attributecombinationphotos.py  attributecombinations.py  attributes.py  attributevalues.py  basesubscriptions.py  brands.py  cashups.py  categories.py  categoryproductlayouts.py  categorytree.py  colors.py  conditions.py  credentials.py  creditpointmutations.py  creditpoints.py  currentsubscriptions.py  currentuser.py  dashboardblocks.py  dashboards.py  disabledpaymethods.py  discountcoupons.py  domains.py  fiscaltransactionsignatures.py  geozonecountries.py  invoicelabels.py  invoicenotifications.py  invoicerows.py  invoices.py  labels.py  languages.py  (+62 more)
generator/: __init__.py  prober.py  pyproject.toml
generator/templates/: client.py.j2
generator/templates/api/: __init__.py.j2  endpoint.py.j2
source/: pyproject.toml
source/ccv/: client.py
source/ccv/endpoints/: __init__.py  affiliatenetworks.py  apicredentialdevicesettings.py  appcodeblocks.py  appmessages.py  apppsp.py  apppsppaymethods.py  apps.py  appstorecategories.py  attributecombinationphotos.py  attributecombinations.py  categories.py  categorytree.py  colors.py  disabledpaymethods.py  discountcoupons.py  domains.py  fiscaltransactionsignatures.py  geozonecountries.py  invoicelabels.py  invoicerows.py  mailinglists.py  (+34 more)
