[project]
name = "ccvshop-client-generator"
version = "0.1.0"
description = "CLI tool to generate CCVShop API client code"
dependencies = ["httpx", "selectolax", "jinja2"]

[project.scripts]
ccvshop-client-gen = "generator.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
